<resources>
    <string name="app_name">Domasna Rabota br.2</string>
    <string name="button">Search</string>
    <string name="ang_mak">Ang to Mak</string>
    <string name="ang">ang</string>
    <string name="mkd">mkd</string>
    <string name="save">save</string>
    <string name="mk">Mk</string>
    <string name="Mk">Mk</string>
    <string name="add">Add</string>
    <string name="Add">add</string>
    <string name="test1">example dialog</string>

</resources>
